go server finished with progress
