# Handin 3/Backend/docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/sensors/air-quality/co2": {
+        "/api/v1/sensors/air-quality/co2": {
             "get": {
                 "description": "Gets the latest Co2 measurement from the database",
                 "consumes": [
@@ -14,7 +14,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "/sensors/air-quality"
+                    "GET API Endpoints"
                 ],
                 "summary": "Get latest Co2 measurement",
                 "responses": {
@@ -31,7 +31,7 @@
                 }
             }
         },
-        "/sensors/air-quality/voc": {
+        "/api/v1/sensors/air-quality/voc": {
             "get": {
                 "description": "Gets the latest VOC measurement from the database",
                 "consumes": [
@@ -41,7 +41,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "/sensors/air-quality"
+                    "GET API Endpoints"
                 ],
                 "summary": "Get latest VOC measurement",
                 "responses": {
@@ -50,6 +50,46 @@
                         "schema": {
                             "$ref": "#/definitions/models.Measurement"
                         }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {}
+                    }
+                }
+            }
+        },
+        "/led-state/{on}": {
+            "put": {
+                "description": "Change led state on IoT device",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "PUT API Endpoints"
+                ],
+                "summary": "Change led state on IoT device",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "State of led, 0 = off, 1 = on",
+                        "name": "on",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
                     },
                     "500": {
                         "description": "Internal Server Error",
@@ -69,7 +109,7 @@
                 "id": {
                     "type": "integer"
                 },
-                "measuremenType": {
+                "measurementType": {
                     "type": "string"
                 },
                 "value": {
